------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

Heikki Sairanen <firstname.lastname@tut.fi>

	* Leprosy improved a lot and is cureable
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* aclocal.m4 updates or something strange like that anyway :)
	
<Many entries missing, sorry...>

??? Timo Kiviluoto <firstname.lastname@kolumbus.fi>

<entry incomplete>

	* It is no longer possible to kick stones under walls
	* It is no longer possible to detect traps by floating over them, dropping
	  items and checking if the total weight of the stack is greater than the
	  items' weights' sum

January 6 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Now compiles in linux. The corrections are _bad_ so checking them wouldn't be a bad idea.
	
January 1 2004 Timo Kiviluoto <firstname.lastname@hut.fi>

	* Corrected a fatal bug in the cloning code
	* Fixed a problem that caused the fluid system to run occasionally very slowly
	* Decreased the banana peel trap damage a little
	* Pressing ESC when choosing a teleport control target no longer crashes
	* Prevented crystals from spawning over stairs in UT4

January 1 2004 Timo Kiviluoto <firstname.lastname@hut.fi>

	* Corrected an extremely fatal bug in the square destruction code (it may
	  have caused random crashes when changing levels)
	* Fixed a harmless light update absence bug in the cloning code
	* N simultaneously bought items in a shop can no longer cost more than N
	  times one item's price (formelly this was possible since all arithmetic
	  operations during the price calculations were rounded down)
	* Monsters now avoid needlessly stepping on banana peels and broken bottles