@@ -180,3 +180,32 @@ level* dungeon::LoadLevel(inputfile& SaveFile, int Number)
   Level[Number]->SetLevelScript(GetLevelScript(Number));
   return Level[Number];
 }
+
+int dungeon::GetLevelTeleportDestination(int From) const
+{
+  int To;
+  if(Index == ELPURI_CAVE)
+    {
+      if(RAND_2)
+	{
+	  To = From + RAND_2 + RAND_2 + RAND_2 + RAND_2 + 1;
+	  if(From > DARK_LEVEL)
+	    To = From;
+	    
+	}
+      else
+	{
+	  To = From - RAND_2 - RAND_2 - RAND_2 - RAND_2 - 1;
+	  if(To < 0)
+	    To = 0;
+	}
+      return To;
+    }
+
+
+  if(Index == UNDER_WATER_TUNNEL)
+    {
+      return RAND_N(3);
+    }
+  return From;
+}
