@@ -9,6 +9,10 @@ is also provided AS IS and is probably completely unreadable.
 
 Heikki Sairanen <firstname.lastname@tut.fi>
 
+	* Fountains can now throw player to other fountains in near levels or same level.
+	
+Heikki Sairanen <firstname.lastname@tut.fi>
+
 	* Leprosy improved a lot and is cureable
 	
 Heikki Sairanen <firstname.lastname@tut.fi>
